--- a/semana05/dia01-css-reto1-results-sumary/css/styles.css
+++ b/semana05/dia01-css-reto1-results-sumary/css/styles.css
@@ -238,6 +238,8 @@ body {
   font-size: .8rem;
   font-weight: var(--font-weight-bold);
 
+  cursor: pointer;
+
   transition: background .3s ease;
 }
 
