--- a/semana05/dia01-css-reto1-results-sumary/css/styles.css
+++ b/semana05/dia01-css-reto1-results-sumary/css/styles.css
@@ -55,11 +55,15 @@ body {
   font-family: var(--font-family);
   background-color: var(--neutral-pale-blue);
 
-  height: 100vh;
-
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (width >= 768px) {
+  body {
+    height: 100vh;
+  }
 }
 
 .summary {
