semana05, dia02, css bootstrap

--- a/semana05/dia02-02-sass/styles.css
+++ b/semana05/dia02-02-sass/styles.css
@@ -1,3 +1,27 @@
 body {
-  background-color: orange;
+  background-color: #FFA559;
+  color: blue;
+  text-align: center;
+}
+
+.card {
+  background-color: #e8e8e8;
+  border: 3px solid #454545;
+  border-radius: 8px;
+  text-align: left;
+  color: #333333;
+}
+.card__header {
+  padding: 1rem 1.5rem;
+  border-bottom: 3px solid #454545;
+}
+.card__title {
+  font-weight: 600;
+}
+.card__body {
+  padding: 1rem 1.5rem;
+  min-height: 80px;
+}
+.card--success {
+  background-color: #DDEEAA;
 }/*# sourceMappingURL=styles.css.map */
