--- a/semana05/dia02-02-sass/styles.scss
+++ b/semana05/dia02-02-sass/styles.scss
@@ -5,6 +5,18 @@ $card-text: #333333;
 $card-border-color: #454545;
 $card-border-radius: 8px;
 
+@mixin default-border {
+  border: 5px solid blue;
+}
+
+@mixin custom-border($width, $color, $is-solid: true) {
+  @if $is-solid {
+    border: $width solid $color;
+  } @else {
+    border: $width dashed $color;
+  }
+}
+
 body {
   background-color: $primary-color;
   color: blue;
@@ -15,6 +27,9 @@ body {
   background-color: $card-bg;
   border: 3px solid $card-border-color;
   border-radius: $card-border-radius;
+
+  @include default-border;
+  @include custom-border(8px, orangered, false);
 
   text-align: left;
   color: $card-text;
