--- a/semana05/dia03-01-css-github-user-app/styles.css
+++ b/semana05/dia03-01-css-github-user-app/styles.css
@@ -20,3 +20,82 @@
   --light-blue: #0079fe;
   --white: #FFFFFF;
 }
+
+/* GENERAL */
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+html {
+  font-size: var(--font-size);
+}
+
+body {
+  font-family: var(--font-primary);
+  background-color: var(--dark-blue-1);
+  color: var(--white);
+}
+
+/* UTILS */
+
+.wrapper {
+  width: min(100% - 3rem, 720px);
+  /* margin: 0 auto; */
+  margin-inline: auto; /* margin-left + margin-right */
+}
+
+/* PROFILE */
+
+.profile {
+  border: 1px solid red;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+/* PROFILE / HEADER */
+
+.profile__header {
+  padding: 1rem 0;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.profile__logo {
+  font-size: 1.5rem;
+  font-weight: var(--font-weight-bold);
+}
+
+.profile__mode {
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight-semibold);
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+
+  border: none;
+  background-color: transparent;
+  color: white;
+
+  display: flex;
+  align-items: center;
+  gap: .5rem;
+}
+
+.profile__mode svg {
+  fill: white;
+}
+
+.profile__mode--ligth .mode-dark {
+  display: none;
+}
+
+.profile__mode--dark .mode-ligth {
+  display: none;
+}
+
+/* SEARCH */
